--- a/sick-fits/backend/prisma.yml
+++ b/sick-fits/backend/prisma.yml
@@ -1,4 +1,5 @@
 endpoint: ${env:PRISMA_ENDPOINT}
+# endpoint: https://server-name-551625b64f.herokuapp.com/sick-fits-prod/prod
 # endpoint: https://eu1.prisma.sh/nguyen-dinh-tao-6dda05/sick-fits-taoqn/dev
 datamodel: datamodel.prisma
 secret: ${env:PRISMA_SECRET}
