--- a/sick-fits/backend/package.json
+++ b/sick-fits/backend/package.json
@@ -2,11 +2,16 @@
   "name": "sick-fits-backend",
   "version": "1.0.0",
   "description": "the backend of sick fits",
+  "engines": {
+    "node": "10.15.1"
+  },
+  "main": "src/index.js",
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/index.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
     "test": "jest",
-    "deploy": "prisma deploy --env-file variables.env"
+    "deploy": "prisma deploy --env-file variables.env",
+    "heroku-postbuild": "nodemon -e js,graphql -x node src/index.js"
   },
   "dependencies": {
     "babel-preset-env": "^1.7.0",
